--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Custom scrollbar styles */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #060b17;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #304159;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #243a5a;
+}
+  
